creusot/tests/should_fail/prusti/logic/send_back.rs
extern crate creusot_contracts;
use creusot_contracts::prusti_prelude::*;

#[logic('x)]
fn move_state<'x, T: Copy>(t: T) -> T {
    t
}
