creusot/tests/should_fail/prusti/logic/send_back.stderr
error[creusot]: `T` cannot be moved from `'x` to `'now` since it didn't exist at that point
 --> send_back.rs:6:5
  |
6 |     t
  |     ^

error: aborting due to previous error

